@@ -1,3 +1,2 @@
-<p><br />
 <p>http://example.com/files/test_image.gif</p>
 <p>/wiki/en/ParserFunctions2</p>
