@@ -1,5 +1,4 @@
 <!-- test usage and rendering of parser functions -->
-
 {{filepath: Test Image.gif}}
 
 {{localurl: {{PAGENAME}}}}
